examples/test/testpolicy18675.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18675
  namespace: namespace444
spec:
  podSelector:
    matchLabels:
      key34: value20
      key35: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value19
          key44: value33
          key13: value0
      podSelector:
        matchLabels:
          key45: value33
